ExpressionUtilities.ResolveToList w/tests
ExpressionUtilitiesTests
ArrayExpression with tests
SetArrayCommand with tests
NewArrayExpression with tests
AjSharpMachineTests
InitializeNewArrayExpression with tests
array support in Parser (new, access, setting)
SumArray.ajs in tests
ExpressionUtilities.ResolveToDictionary with tests
Non numeric subindices in array processing (using IDictionary)

2009-09-20
ConcatenateExpression w/tests
StringUtilities w/tests
string expansion in parser w/tests
! && || support in Parser w/text
EvaluateExpression, ExecuteSubroutine w/tests
AjLanguageWithTests.sln
Evaluate, Execute as primitives in AjSharpMachine
Support for /* */ // comments in lexer

2009-12-26
Fixing create a classic object with unitialized vars
DefineObjectCommand with tests
object ... { .... } support in Parser
Class.ajs, Object.ajs, ClassObject.ajs in tests
Channel in AjLanguage.Language
ChannelTests
Channel as aliased type in AjSharpMachine
GoCommand in AjLanguage
go command in AjSharp parser
New file tests: Constructor.ajs, Go.ajs
for command in Parser
New file tests: Channel.ajs, ChannelManyTimes.ajs, For.ajs
LocalBindingEnvironment to use in parallel GoCommand execution
Support for a = <-channel;
Support for channel <- a;
New test files: ChannelOperator.ajs, ChannelManyTimesOperator.ajs

2009-12-27
File processing in AjSharp.Console
Examples in AjSharp.Console: Generate.ajs, Filter.ajs, Primes.ajs
Setting Machine.Current when go command
New file tests: Generate.ajs, Filter.ajs
LocalBindingEnvironment in CompositeCommand
ContainsName override in LocalBindingEnvironment 
ILocalCallable for functions that SHOULD received an environment
EvaluateFunction is ILocalCallable
New file tests (about scope): ScopeWhile.ajs, ScopeWhileComposite.ajs,
	ScopeEvaluate.ajs, ScopeEvaluateInFunction.ajs,
	ScopeFunction.ajs, ScopeFunctionReturn.ajs
New examples in Console: TwoFilters.ajs, PrimesVerbose.ajs
Fixed Primes.ajs example in Console